--- a/iframe.html
+++ b/iframe.html
@@ -14,7 +14,7 @@
                 </td>
                 <td rowspan="4" align="center"><a href="web.html"><img src="circle-cropped.png" width="120px" height="120px"></td>
                 <td colspan="2" align="right" valign="top">
-                    <a href="index.html"><i class="fa fa-user"> Login</i></a> <a href="https://mail.google.com/"><i class="fa fa-envelope"> Web Mail</i></a> <a href="website/contact"><i class="fa fa-address-book"> Contact Us</i></a>
+                    <a href="login.html"><i class="fa fa-user"> Login</i></a> <a href="https://mail.google.com/"><i class="fa fa-envelope"> Web Mail</i></a> <a href="website/contact"><i class="fa fa-address-book"> Contact Us</i></a>
                 </td>
 
             </tr>
