--- a/login.html
+++ b/login.html
@@ -3,6 +3,6 @@
         <title>Portal | AISB</title>
     </head>
     <body>
-        <div><iframe src="https://aisbschoolportal.000webhostapp.com/" height="100%" width="100%" frameBorder="0"></iframe></div>
+        <div><iframe src="https://aisbschoolportal.000webhostapp.com/login.html" height="100%" width="100%" frameBorder="0"></iframe></div>
     </body>
 </html>
